--- a/data/data_manipulation.ipynb
+++ b/data/data_manipulation.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "a8116758",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "b1dc4489",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "47b01793",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "e1a5341f",
    "metadata": {},
    "outputs": [],
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "9dfbfa3c",
    "metadata": {},
    "outputs": [],
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "19c16c14",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DSTA",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1162,7 +1162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
